[gd_scene load_steps=9 format=2]

[ext_resource path="res://Test/test_bg.png" type="Texture" id=1]
[ext_resource path="res://Lexical/Sentence/InteractiveSentence.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/InteractionTest/InteractionTest.gd" type="Script" id=3]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/pressFtoExit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Test/InteractionTest/InteractionTestButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 13
extra_spacing_top = -6
extra_spacing_bottom = -9
font_data = ExtResource( 4 )

[node name="InteractionTest" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 331.0
margin_bottom = 198.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="test_bg" type="Sprite" parent="."]
position = Vector2( 162.159, 96.4283 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InteractiveSentence" parent="." instance=ExtResource( 2 )]
position = Vector2( 125.029, 27.883 )

[node name="Submit" type="Button" parent="."]
margin_left = 240.0
margin_top = 148.0
margin_right = 304.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "_submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 64.2399
margin_right = 84.0
margin_bottom = 84.2399

[node name="Button1" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 89.9037
margin_right = 84.0
margin_bottom = 109.904

[node name="Button6" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 116.527
margin_right = 84.0
margin_bottom = 136.527

[node name="Button2" parent="." instance=ExtResource( 6 )]
margin_left = 111.852
margin_top = 64.0
margin_right = 179.852
margin_bottom = 84.0

[node name="Button4" parent="." instance=ExtResource( 6 )]
margin_left = 111.852
margin_top = 89.6639
margin_right = 179.852
margin_bottom = 109.664

[node name="Button7" parent="." instance=ExtResource( 6 )]
margin_left = 111.852
margin_top = 116.287
margin_right = 179.852
margin_bottom = 136.287

[node name="Button3" parent="." instance=ExtResource( 6 )]
margin_left = 218.0
margin_top = 64.2399
margin_right = 286.0
margin_bottom = 84.2399

[node name="Button5" parent="." instance=ExtResource( 6 )]
margin_left = 218.0
margin_top = 89.9037
margin_right = 286.0
margin_bottom = 109.904

[node name="Button8" parent="." instance=ExtResource( 6 )]
margin_left = 218.0
margin_top = 116.527
margin_right = 286.0
margin_bottom = 136.527

[node name="Cross" type="Button" parent="."]
margin_left = 16.0
margin_top = 148.0
margin_right = 40.0
margin_bottom = 176.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="."]
margin_left = 48.0
margin_top = 148.0
margin_right = 232.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 3 )
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressFtoExit" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Cross" to="." method="_on_Cross_pressed"]
